Improvements in embedded feedback

--- a/quizzes/lib/util.css
+++ b/quizzes/lib/util.css
@@ -3117,32 +3117,129 @@ md-elevation-transition {
   box-shadow: 0px 8px 10px -5px rgba(0, 0, 0, 0.2), 0px 16px 24px 2px rgba(0, 0, 0, 0.14), 0px 6px 30px 5px rgba(0, 0, 0, 0.12);
 }
 
-.wrsUI_app .wrsUI_textComponent {
+.wrsUI_app .wrsUI_inputComponent.wrsUI_inputComponentCorrect {
+  border-bottom: 1px solid #318849;
+}
+.wrsUI_app .wrsUI_inputComponent.wrsUI_inputComponentCorrect::after {
+  font-family: "Material Icons";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px !important;
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+  content: "check_circle";
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  -moz-osx-font-smoothing: grayscale;
+  font-feature-settings: "liga";
+  color: #318849;
+  position: absolute;
+  right: -28px;
+  top: calc(50% - 12px);
+}
+.wrsUI_app .wrsUI_inputComponent.wrsUI_inputComponentCorrect > input {
+  color: #318849 !important;
+}
+.wrsUI_app .wrsUI_inputComponent.wrsUI_inputComponentCorrect > hr {
+  border-bottom: 2px solid #318849;
+}
+.wrsUI_app .wrsUI_inputComponent.wrsUI_inputComponentWarning {
+  border-bottom: 1px solid #C99A08;
+}
+.wrsUI_app .wrsUI_inputComponent.wrsUI_inputComponentWarning::after {
+  font-family: "Material Icons";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px !important;
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+  content: "error";
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  -moz-osx-font-smoothing: grayscale;
+  font-feature-settings: "liga";
+  color: #C99A08;
+  position: absolute;
+  right: -28px;
+  top: calc(50% - 12px);
+}
+.wrsUI_app .wrsUI_inputComponent.wrsUI_inputComponentWarning > input {
+  color: #C99A08 !important;
+}
+.wrsUI_app .wrsUI_inputComponent.wrsUI_inputComponentWarning > hr {
+  border-bottom: 2px solid #C99A08;
+}
+.wrsUI_app .wrsUI_inputComponent.wrsUI_inputComponentError {
+  border-bottom: 1px solid #FF0000;
+}
+.wrsUI_app .wrsUI_inputComponent.wrsUI_inputComponentError::after {
+  font-family: "Material Icons";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px !important;
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+  content: "cancel";
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  -moz-osx-font-smoothing: grayscale;
+  font-feature-settings: "liga";
+  color: #FF0000;
+  position: absolute;
+  right: -28px;
+  top: calc(50% - 12px);
+}
+.wrsUI_app .wrsUI_inputComponent.wrsUI_inputComponentError > input {
+  color: #FF0000 !important;
+}
+.wrsUI_app .wrsUI_inputComponent.wrsUI_inputComponentError > hr {
+  border-bottom: 2px solid #FF0000;
+}
+
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent {
   position: relative;
   display: inline-block;
   background: rgba(0, 0, 0, 0.03);
   border-radius: 4px 4px 0 0;
   border-bottom: 1px solid #778e9a;
 }
-.wrsUI_app .wrsUI_textComponent:not(.wrsUI_textComponentEmpty) > label {
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent:not(.wrsUI_textComponentEmpty) > label {
   transform: translateY(-5px) scale(0.75);
   color: #778e9a;
 }
-.wrsUI_app .wrsUI_textComponent.wrsUI_focused > label {
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent.wrsUI_focused > label {
   color: #6793a9;
   transform: translateY(-5px) scale(0.75);
 }
-.wrsUI_app .wrsUI_textComponent.wrsUI_focused > input::placeholder, .wrsUI_app .wrsUI_textComponent.wrsUI_focused > textarea::placeholder {
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent.wrsUI_focused > input::placeholder, .wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent.wrsUI_focused > textarea::placeholder {
   opacity: 1;
 }
-.wrsUI_app .wrsUI_textComponent.wrsUI_focused > label {
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent.wrsUI_focused > label {
   transform: translateY(-5px) scale(0.75);
   color: #6793a9;
 }
-.wrsUI_app .wrsUI_textComponent.wrsUI_focused > hr {
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent.wrsUI_focused > hr {
   display: block;
 }
-.wrsUI_app .wrsUI_textComponent > label {
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent > label {
   position: absolute;
   left: 12px;
   pointer-events: none;
@@ -3150,17 +3247,17 @@ md-elevation-transition {
   line-height: 49px;
   transform-origin: left top;
 }
-.wrsUI_app .wrsUI_textComponent.wrsUI_textComponentWithPrefix > input, .wrsUI_app .wrsUI_textComponent.wrsUI_textComponentWithPrefix > textarea {
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent.wrsUI_textComponentWithPrefix > input, .wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent.wrsUI_textComponentWithPrefix > textarea {
   border-left-width: 28px;
 }
-.wrsUI_app .wrsUI_textComponent.wrsUI_textComponentWithSuffix > input, .wrsUI_app .wrsUI_textComponent.wrsUI_textComponentWithSuffix > textarea {
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent.wrsUI_textComponentWithSuffix > input, .wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent.wrsUI_textComponentWithSuffix > textarea {
   text-align: right;
   border-right-width: 28px;
 }
-.wrsUI_app .wrsUI_textComponent:not(.wrsUI_textComponentWithLabel) input::placeholder {
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent:not(.wrsUI_textComponentWithLabel) input::placeholder {
   opacity: 1;
 }
-.wrsUI_app .wrsUI_textComponent .wrsUI_aux_textComponentPrefix, .wrsUI_app .wrsUI_textComponent .wrsUI_aux_textComponentSuffix {
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent .wrsUI_aux_textComponentPrefix, .wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent .wrsUI_aux_textComponentSuffix {
   position: absolute;
   max-width: 20px;
   line-height: 49px;
@@ -3169,13 +3266,22 @@ md-elevation-transition {
   font-style: inherit;
   font-weight: inherit;
 }
-.wrsUI_app .wrsUI_textComponent .wrsUI_aux_textComponentPrefix.wrsUI_aux_textComponentPrefix, .wrsUI_app .wrsUI_textComponent .wrsUI_aux_textComponentSuffix.wrsUI_aux_textComponentPrefix {
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent .wrsUI_aux_textComponentPrefix.wrsUI_aux_textComponentPrefix, .wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent .wrsUI_aux_textComponentSuffix.wrsUI_aux_textComponentPrefix {
   left: 12px;
 }
-.wrsUI_app .wrsUI_textComponent .wrsUI_aux_textComponentPrefix.wrsUI_aux_textComponentSuffix, .wrsUI_app .wrsUI_textComponent .wrsUI_aux_textComponentSuffix.wrsUI_aux_textComponentSuffix {
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent .wrsUI_aux_textComponentPrefix.wrsUI_aux_textComponentSuffix, .wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent .wrsUI_aux_textComponentSuffix.wrsUI_aux_textComponentSuffix {
   right: 12px;
 }
-.wrsUI_app .wrsUI_textComponent > hr {
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent.wrsUI_inputComponentCorrect > .wrsUI_aux_textComponentPrefix, .wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent.wrsUI_inputComponentCorrect > .wrsUI_aux_textComponentSuffix {
+  color: #318849;
+}
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent.wrsUI_inputComponentWarning > .wrsUI_aux_textComponentPrefix, .wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent.wrsUI_inputComponentWarning > .wrsUI_aux_textComponentSuffix {
+  color: #C99A08;
+}
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent.wrsUI_inputComponentError > .wrsUI_aux_textComponentPrefix, .wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent.wrsUI_inputComponentError > .wrsUI_aux_textComponentSuffix {
+  color: #FF0000;
+}
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent > hr {
   display: none;
   position: absolute;
   left: 50%;
@@ -3185,10 +3291,10 @@ md-elevation-transition {
   border: none;
   border-bottom: 2px solid #6793a9;
 }
-.wrsUI_app .wrsUI_textComponent[disabled] {
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent[disabled] {
   border-bottom: 1px solid rgba(0, 0, 0, 0.03);
 }
-.wrsUI_app .wrsUI_textComponent[disabled] > label, .wrsUI_app .wrsUI_textComponent[disabled] > input, .wrsUI_app .wrsUI_textComponent[disabled] > textarea {
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent[disabled] > label, .wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent[disabled] > input, .wrsUI_app .wrsUI_inputComponent.wrsUI_textComponent[disabled] > textarea {
   color: #979797;
 }
 
@@ -3225,7 +3331,7 @@ md-elevation-transition {
   transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1), border 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.wrsUI_app .wrsUI_textField > input {
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textField > input {
   width: 100%;
   line-height: 49px;
   color: #000;
@@ -3234,139 +3340,37 @@ md-elevation-transition {
   border-width: 0 12px;
   box-sizing: border-box;
 }
-.wrsUI_app .wrsUI_textField > input::placeholder {
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textField > input::placeholder {
   opacity: 0;
   color: #9e9e9e;
 }
-.wrsUI_app .wrsUI_textField > input[type=number] {
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textField > input[type=number] {
   -moz-appearance: textfield;
 }
-.wrsUI_app .wrsUI_textField > input[type=number]::-webkit-inner-spin-button, .wrsUI_app .wrsUI_textField > input[type=number]::-webkit-outer-spin-button, .wrsUI_app .wrsUI_textField > input[type=number]:hover::-webkit-inner-spin-button, .wrsUI_app .wrsUI_textField > input[type=number]:hover::-webkit-outer-spin-button {
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textField > input[type=number]::-webkit-inner-spin-button, .wrsUI_app .wrsUI_inputComponent.wrsUI_textField > input[type=number]::-webkit-outer-spin-button, .wrsUI_app .wrsUI_inputComponent.wrsUI_textField > input[type=number]:hover::-webkit-inner-spin-button, .wrsUI_app .wrsUI_inputComponent.wrsUI_textField > input[type=number]:hover::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-.wrsUI_app .wrsUI_textField.wrsUI_textComponentWithPrefix.wrsUI_textFieldCorrect > input, .wrsUI_app .wrsUI_textField.wrsUI_textComponentWithPrefix.wrsUI_textFieldCorrect > textarea, .wrsUI_app .wrsUI_textField.wrsUI_textComponentWithPrefix.wrsUI_textFieldWarning > input, .wrsUI_app .wrsUI_textField.wrsUI_textComponentWithPrefix.wrsUI_textFieldWarning > textarea, .wrsUI_app .wrsUI_textField.wrsUI_textComponentWithPrefix.wrsUI_textFieldError > input, .wrsUI_app .wrsUI_textField.wrsUI_textComponentWithPrefix.wrsUI_textFieldError > textarea {
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textField.wrsUI_inputComponentCorrect::after, .wrsUI_app .wrsUI_inputComponent.wrsUI_textField.wrsUI_inputComponentWarning::after, .wrsUI_app .wrsUI_inputComponent.wrsUI_textField.wrsUI_inputComponentError::after {
+  right: 12px;
+}
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textField.wrsUI_textComponentWithPrefix.wrsUI_inputComponentCorrect > input, .wrsUI_app .wrsUI_inputComponent.wrsUI_textField.wrsUI_textComponentWithPrefix.wrsUI_inputComponentCorrect > textarea, .wrsUI_app .wrsUI_inputComponent.wrsUI_textField.wrsUI_textComponentWithPrefix.wrsUI_inputComponentWarning > input, .wrsUI_app .wrsUI_inputComponent.wrsUI_textField.wrsUI_textComponentWithPrefix.wrsUI_inputComponentWarning > textarea, .wrsUI_app .wrsUI_inputComponent.wrsUI_textField.wrsUI_textComponentWithPrefix.wrsUI_inputComponentError > input, .wrsUI_app .wrsUI_inputComponent.wrsUI_textField.wrsUI_textComponentWithPrefix.wrsUI_inputComponentError > textarea {
   border-right-width: 44px;
 }
-.wrsUI_app .wrsUI_textField.wrsUI_textComponentWithSuffix.wrsUI_textFieldCorrect > input, .wrsUI_app .wrsUI_textField.wrsUI_textComponentWithSuffix.wrsUI_textFieldCorrect > textarea, .wrsUI_app .wrsUI_textField.wrsUI_textComponentWithSuffix.wrsUI_textFieldWarning > input, .wrsUI_app .wrsUI_textField.wrsUI_textComponentWithSuffix.wrsUI_textFieldWarning > textarea, .wrsUI_app .wrsUI_textField.wrsUI_textComponentWithSuffix.wrsUI_textFieldError > input, .wrsUI_app .wrsUI_textField.wrsUI_textComponentWithSuffix.wrsUI_textFieldError > textarea {
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textField.wrsUI_textComponentWithSuffix.wrsUI_inputComponentCorrect > input, .wrsUI_app .wrsUI_inputComponent.wrsUI_textField.wrsUI_textComponentWithSuffix.wrsUI_inputComponentCorrect > textarea, .wrsUI_app .wrsUI_inputComponent.wrsUI_textField.wrsUI_textComponentWithSuffix.wrsUI_inputComponentWarning > input, .wrsUI_app .wrsUI_inputComponent.wrsUI_textField.wrsUI_textComponentWithSuffix.wrsUI_inputComponentWarning > textarea, .wrsUI_app .wrsUI_inputComponent.wrsUI_textField.wrsUI_textComponentWithSuffix.wrsUI_inputComponentError > input, .wrsUI_app .wrsUI_inputComponent.wrsUI_textField.wrsUI_textComponentWithSuffix.wrsUI_inputComponentError > textarea {
   border-left-width: 44px;
 }
-.wrsUI_app .wrsUI_textField.wrsUI_textComponentWithSuffix.wrsUI_textFieldCorrect::after, .wrsUI_app .wrsUI_textField.wrsUI_textComponentWithSuffix.wrsUI_textFieldWarning::after, .wrsUI_app .wrsUI_textField.wrsUI_textComponentWithSuffix.wrsUI_textFieldError::after {
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textField.wrsUI_textComponentWithSuffix.wrsUI_inputComponentCorrect::after, .wrsUI_app .wrsUI_inputComponent.wrsUI_textField.wrsUI_textComponentWithSuffix.wrsUI_inputComponentWarning::after, .wrsUI_app .wrsUI_inputComponent.wrsUI_textField.wrsUI_textComponentWithSuffix.wrsUI_inputComponentError::after {
   right: unset;
   left: 12px;
 }
-.wrsUI_app .wrsUI_textField.wrsUI_textComponentWithLabel.wrsUI_textComponentWithPrefix .wrsUI_aux_textComponentPrefix, .wrsUI_app .wrsUI_textField.wrsUI_textComponentWithLabel.wrsUI_textComponentWithPrefix .wrsUI_aux_textComponentSuffix, .wrsUI_app .wrsUI_textField.wrsUI_textComponentWithLabel.wrsUI_textComponentWithSuffix .wrsUI_aux_textComponentPrefix, .wrsUI_app .wrsUI_textField.wrsUI_textComponentWithLabel.wrsUI_textComponentWithSuffix .wrsUI_aux_textComponentSuffix {
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textField.wrsUI_textComponentWithLabel.wrsUI_textComponentWithPrefix .wrsUI_aux_textComponentPrefix, .wrsUI_app .wrsUI_inputComponent.wrsUI_textField.wrsUI_textComponentWithLabel.wrsUI_textComponentWithPrefix .wrsUI_aux_textComponentSuffix, .wrsUI_app .wrsUI_inputComponent.wrsUI_textField.wrsUI_textComponentWithLabel.wrsUI_textComponentWithSuffix .wrsUI_aux_textComponentPrefix, .wrsUI_app .wrsUI_inputComponent.wrsUI_textField.wrsUI_textComponentWithLabel.wrsUI_textComponentWithSuffix .wrsUI_aux_textComponentSuffix {
   padding-top: 14px;
   line-height: 35px;
 }
-.wrsUI_app .wrsUI_textField.wrsUI_textComponentWithLabel > input {
+.wrsUI_app .wrsUI_inputComponent.wrsUI_textField.wrsUI_textComponentWithLabel > input {
   padding-top: 14px;
   line-height: 35px;
-}
-.wrsUI_app .wrsUI_textField.wrsUI_textFieldCorrect {
-  border-bottom: 1px solid #318849;
-}
-.wrsUI_app .wrsUI_textField.wrsUI_textFieldCorrect::after {
-  font-family: "Material Icons";
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px !important;
-  width: 24px;
-  height: 24px;
-  display: inline-block;
-  text-transform: none;
-  letter-spacing: normal;
-  word-wrap: normal;
-  white-space: nowrap;
-  direction: ltr;
-  content: "check_circle";
-  -webkit-font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
-  -moz-osx-font-smoothing: grayscale;
-  font-feature-settings: "liga";
-  color: #318849;
-  position: absolute;
-  right: 12px;
-  top: calc(50% - 12px);
-}
-.wrsUI_app .wrsUI_textField.wrsUI_textFieldCorrect > input {
-  color: #318849;
-}
-.wrsUI_app .wrsUI_textField.wrsUI_textFieldCorrect > hr {
-  border-bottom: 2px solid #318849;
-}
-.wrsUI_app .wrsUI_textField.wrsUI_textFieldCorrect > .wrsUI_aux_textComponentPrefix, .wrsUI_app .wrsUI_textField.wrsUI_textFieldCorrect > .wrsUI_aux_textComponentSuffix {
-  color: #318849;
-}
-.wrsUI_app .wrsUI_textField.wrsUI_textFieldWarning {
-  border-bottom: 1px solid #C99A08;
-}
-.wrsUI_app .wrsUI_textField.wrsUI_textFieldWarning::after {
-  font-family: "Material Icons";
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px !important;
-  width: 24px;
-  height: 24px;
-  display: inline-block;
-  text-transform: none;
-  letter-spacing: normal;
-  word-wrap: normal;
-  white-space: nowrap;
-  direction: ltr;
-  content: "error";
-  -webkit-font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
-  -moz-osx-font-smoothing: grayscale;
-  font-feature-settings: "liga";
-  color: #C99A08;
-  position: absolute;
-  right: 12px;
-  top: calc(50% - 12px);
-}
-.wrsUI_app .wrsUI_textField.wrsUI_textFieldWarning > input {
-  color: #C99A08;
-}
-.wrsUI_app .wrsUI_textField.wrsUI_textFieldWarning > hr {
-  border-bottom: 2px solid #C99A08;
-}
-.wrsUI_app .wrsUI_textField.wrsUI_textFieldWarning > .wrsUI_aux_textComponentPrefix, .wrsUI_app .wrsUI_textField.wrsUI_textFieldWarning > .wrsUI_aux_textComponentSuffix {
-  color: #C99A08;
-}
-.wrsUI_app .wrsUI_textField.wrsUI_textFieldError {
-  border-bottom: 1px solid #FF0000;
-}
-.wrsUI_app .wrsUI_textField.wrsUI_textFieldError::after {
-  font-family: "Material Icons";
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px !important;
-  width: 24px;
-  height: 24px;
-  display: inline-block;
-  text-transform: none;
-  letter-spacing: normal;
-  word-wrap: normal;
-  white-space: nowrap;
-  direction: ltr;
-  content: "cancel";
-  -webkit-font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
-  -moz-osx-font-smoothing: grayscale;
-  font-feature-settings: "liga";
-  color: #FF0000;
-  position: absolute;
-  right: 12px;
-  top: calc(50% - 12px);
-}
-.wrsUI_app .wrsUI_textField.wrsUI_textFieldError > input {
-  color: #FF0000;
-}
-.wrsUI_app .wrsUI_textField.wrsUI_textFieldError > hr {
-  border-bottom: 2px solid #FF0000;
-}
-.wrsUI_app .wrsUI_textField.wrsUI_textFieldError > .wrsUI_aux_textComponentPrefix, .wrsUI_app .wrsUI_textField.wrsUI_textFieldError > .wrsUI_aux_textComponentSuffix {
-  color: #FF0000;
 }
 .wrsUI_app .wrsUI_dropdownTextFieldDialog {
   background: #fff;
